# nv-detections-classes-replacement

./: .dockerignore  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml  requirements.dev.txt  requirements.prod.txt  service.py
apps/: run_sample_request.py  sample_request.json
notebooks/: no_train_demo.ipynb
resources/: benchmark_research_report.md
src/: __init__.py
src/executors/: __init__.py  detections_classes_replacement_executor.py  package_init_placeholder_executor.py
src/models/: PackageModel.py  __init__.py  package_model.py
src/utils/: __init__.py
tests/: test_executor.py  test_package_model.py
