[project]
name = "nv-detections-classes-replacement"
version = "0.1.0"
description = "NovaVision component scaffold for replacing detection classes with classification outputs."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1,<3"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

